--- a/FirstGame/android/res/values/strings.xml
+++ b/FirstGame/android/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="app_name">Pond Skater</string>
 
+    <!--Testing id-->
+    <!--AdMob-->
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <!--DFP-->
+    <!--string name="banner_ad_unit_id">/6499/example/banner</string-->
+
 </resources>
