--- a/pondSkater/android/res/values/strings.xml
+++ b/pondSkater/android/res/values/strings.xml
@@ -9,6 +9,6 @@
     <!--DFP-->
     <!--string name="banner_ad_unit_id">/6499/example/banner</string-->
 
-    <string name="leaderboard_id">CgkI-OzSo4sVEAIQAA</string>
+    <string name="leaderboard_id">724582053496</string>
 
 </resources>
