Base de scene, ejemplo MenenuScreen2 se accede desde cualquier pantalla que no sea el menu principal o en el juego falta todavia el touchup

--- a/pondSkater/android/assets/data/es_ES.properties
+++ b/pondSkater/android/assets/data/es_ES.properties
@@ -1,2 +1,5 @@
 dead.score = Tu puntuación es: {0}
 button.playAgain = Volver a jugar
+button.settings = Ajustes
+button.play = Jugar
+button.score = Marcador
